# makatea

./: CLAUDE.md  main.py  pyproject.toml
docs/: Spring Boot Actuator Client_.md
docs/actuator/json/: actuator.json  auditevents.json  beans.json  caches.json  conditions.json  configprops.json  env.json  health.json  httpexchanges.json  info.json  loggers.json  mappings.json  metrics.json  sbom-application.json  scheduledtasks.json  startup.json  threaddump.json
docs/actuator/json/metrics/: application.ready.time.json  application.started.time.json  disk.free.json  disk.total.json  executor.active.json  executor.completed.json  executor.pool.core.json  executor.pool.max.json  executor.pool.size.json  executor.queue.remaining.json  executor.queued.json  http.client.requests.active.json  http.client.requests.json  http.server.requests.active.json  http.server.requests.json  jvm.buffer.count.json  jvm.buffer.memory.used.json  jvm.buffer.total.capacity.json  jvm.classes.loaded.json  jvm.classes.unloaded.json  jvm.compilation.time.json  jvm.gc.live.data.size.json  jvm.gc.max.data.size.json  jvm.gc.memory.allocated.json  jvm.gc.memory.promoted.json  jvm.gc.overhead.json  jvm.gc.pause.json  jvm.info.json  jvm.memory.committed  jvm.memory.max.json  jvm.memory.usage.after.gc.json  jvm.memory.used.json  (+20 more)
docs/design/: project.md  runtime_info_design.md
src/config/servers/: CLAUDE.md  server_manager.py  spring_boot_server.py
src/tinydb/: CLAUDE.md  tiny_repo.py
tests/config/servers/: test_server_manager.py  test_spring_boot_server.py
tests/tinydb/: test_tinydb.py
(+54 files in other folders)
